Saved some images and added temp welcome message

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <img src="images\Icons\DDVTracker_Logo.webp" alt="Disney Dreamlight Valley Tracker Icon" />
+    <h1 class="display-4">
+        Welcome to my Disney Dreamlight Valley Tracker!<h1>
+    <p>Anyone may use this site to look up informaiton about the in-game Collections of Disney Dreamlight Valley,
+        but registered users may also save and track their personal progress. It is meant to be a companion and offer
+        more user friendly navigation than the in-game menus and to be a reference that won't take away from gameplay.</p>
 </div>
+
