--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="images\Icons\ICODDVTracker.webp" alt="Disney Dreamlight Valley Tracker Icon" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -30,13 +30,27 @@
                 <nav>
                     <ul>
                         <li><a href="/">Home</a></li>
-                        <li><a href="/About">About</a></li>
-                        <li><a href="/Contact">Contact</a></li>
-                        <!-- Add more navigation links as needed -->
+                        <li><a href="/About">My Valley</a></li>
+                        <li><a href="/Contact">Collections</a></li>
+
+                        <li class="mb-1">
+                            <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="true">
+                                Collections
+                            </button>
+                            <div class="collapse show" id="home-collapse" style="">
+                                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                                    <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Characters</a></li>
+                                    <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Critters</a></li>
+                                    <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Fish</a></li>
+                                    <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Ingredients</a></li>
+                                    <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Recipes</a></li>
+                                </ul>
+                        </div>
+                        </li>
                     </ul>
                 </nav>
             </div>
-            <main role="main" class="col-md-10">
+            <main role="main" class="col-md-10 py-3">
                 @RenderBody()
             </main>
         </div>
