--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -24,6 +24,7 @@ body {
 
 /* Layout the sidebar and main content */
 .sidebar {
+    height: 100vh;
     background-color: #425499;
 }
 
@@ -38,13 +39,12 @@ body {
             display: block;
             padding: 10px;
             text-decoration: none;
-            color: #333; /* Adjust color as needed */
-            /* Add more styling for the links */
+            color: white;
         }
 
             .sidebar nav ul li a:hover {
-                background-color: #ddd; /* Adjust color as needed */
-                /* Add more styling for hover state */
+                background-color: #ddd;
+                color: black;
             }
 
 
