--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,10 +31,8 @@
                     <ul>
                         <li><a href="/">Home</a></li>
                         <li><a href="/About">My Valley</a></li>
-                        <li><a href="/Contact">Collections</a></li>
-
-                        <li class="mb-1">
-                            <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="true">
+                        <li>
+                            <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false">
                                 Collections
                             </button>
                             <div class="collapse show" id="home-collapse" style="">
