Adjusted grid and made image resize fluid.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,19 +23,19 @@
         </nav>
     </header>
 
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
-            <div class="col-md-2 sidebar">
-                <!-- Static sidebar navigation -->
+            <div class="col-2 sidebar d-none d-md-block">
+                <!-- Sidebar navigation -->
                 <nav>
                     <ul>
                         <li><a href="/">Home</a></li>
                         <li><a href="/About">My Valley</a></li>
                         <li>
-                            <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false">
-                                Collections
+                            <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#collections-collapse" aria-expanded="false">
+                             Collections
                             </button>
-                            <div class="collapse show" id="home-collapse" style="">
+                            <div class="collapse" id="collections-collapse">
                                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                                     <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Characters</a></li>
                                     <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Critters</a></li>
@@ -43,7 +43,7 @@
                                     <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Ingredients</a></li>
                                     <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Recipes</a></li>
                                 </ul>
-                        </div>
+                            </div>
                         </li>
                     </ul>
                 </nav>
