--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,12 +2,16 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <img src="images\Icons\DDVTracker_Logo.webp" alt="Disney Dreamlight Valley Tracker Icon" />
-    <h1 class="display-4">
-        Welcome to my Disney Dreamlight Valley Tracker!<h1>
-    <p>Anyone may use this site to look up informaiton about the in-game Collections of Disney Dreamlight Valley,
-        but registered users may also save and track their personal progress. It is meant to be a companion and offer
-        more user friendly navigation than the in-game menus and to be a reference that won't take away from gameplay.</p>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-10 text-center">
+            <img class="img-fluid" src="images/Icons/DDVTracker_Logo.webp" alt="Disney Dreamlight Valley Tracker Icon" />
+            <h1 class="display-4">Welcome to my Disney Dreamlight Valley Tracker!</h1>
+            <p>
+                Anyone may use this site to look up information about the in-game Collections of Disney Dreamlight Valley,
+                but registered users may also save and track their personal progress. It is meant to be a companion and offer
+                more user-friendly navigation than the in-game menus and to be a reference that won't take away from gameplay.
+            </p>
+        </div>
+    </div>
 </div>
-
