--- a/Views/Shared/_NavigationPartial.cshtml
+++ b/Views/Shared/_NavigationPartial.cshtml
@@ -2,8 +2,7 @@
 <ul class="navbar-nav">
     <li><a href="/">Home</a></li>
     <li><a href="/About">My Valley</a></li>
-    <li>
-        <a href="#" class="align-items-center collapsed" data-bs-toggle="collapse" data-bs-target="#collections-collapse" aria-expanded="false">
+    <li><a type="button" data-bs-toggle="collapse" data-bs-target="#collections-collapse" aria-expanded="false">
             Collections
         </a>
         <div class="collapse" id="collections-collapse">
