Renamed DbContext. Added grid to home

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -14,4 +14,15 @@
             </p>
         </div>
     </div>
+    <div class="row justify-content-center">
+        <div class="col-5 text-center">
+            <h2 class="display-5">Getting Started</h2>
+            <div class="grid">
+                <div class="tile"><img src="images\Icons\ICOcharacters.webp"/>Characters</div>
+                <div class="tile"><img src="images\Icons\ICOcritters.webp" />Critters</div>
+                <div class="tile"><img src="images\Icons\ICOgems.webp" />Gems</div>
+                <div class="tile"><img src="images\Icons\ICOfish.webp" />Fish</div>
+                <div class="tile"><img src="images\Icons\ICOforage.webp" />Ingredients</div>
+                <div class="tile"><img src="images\Icons\ICOmeals.webp" />Meals</div>
+            </div>
 </div>
