--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -51,8 +51,24 @@ body {
                 background-color: #ddd;
                 color: black;
             }
-            .overlay-menu {
+
+.overlay-menu {
     position: fixed; /* Sit on top of the page content */
     z-index: 1000; /* Ensure it's above other content */
     background-color: white; /* Or any color you want */
+}
+
+/*Homepage */
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 10px;
+}
+
+.tile {
+    background-color: #ddd;
+    padding: 20px;
+    text-align: center;
+    border-radius: 10px;
 }
