--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <div class="row justify-content-center">
         <div class="col-10 text-center">
             <img class="img-fluid" src="images/Icons/DDVTracker_Logo.webp" alt="Disney Dreamlight Valley Tracker Icon" />
-            <h1 class="display-4">Welcome to my Disney Dreamlight Valley Tracker!</h1>
+            <h1 class="display-4">Welcome!</h1>
             <p>
                 Anyone may use this site to look up information about the in-game Collections of Disney Dreamlight Valley,
                 but registered users may also save and track their personal progress. It is meant to be a companion and offer
@@ -14,9 +14,8 @@
             </p>
         </div>
     </div>
-    <div class="row justify-content-center">
-        <div class="col-5 text-center">
-            <h2 class="display-5">Getting Started</h2>
+    <div class="row justify-content-center text-center">
+            <h2 class="collections">Collections</h2>
             <div class="grid">
                 <div class="tile"><img src="images\Icons\ICOcharacters.webp"/>Characters</div>
                 <div class="tile"><img src="images\Icons\ICOcritters.webp" />Critters</div>
