--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -61,6 +61,7 @@ body {
 /*Homepage */
 .grid {
     display: grid;
+    width: 440px;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
     gap: 10px;
@@ -68,7 +69,8 @@ body {
 
 .tile {
     background-color: #ddd;
+    width: 140px;
+    align-content:center;
     padding: 20px;
-    text-align: center;
     border-radius: 10px;
 }
