--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -74,3 +74,8 @@ body {
     padding: 20px;
     border-radius: 10px;
 }
+
+    .tile:hover {
+        background-color: #ccc;
+        box-shadow: inset -3px -3px 7px rgba(255, 255, 255, 0.05), inset 3px 3px 5px rgba(0, 0, 0, 0.15);
+    }
