First draft of character view. Added link to character tile

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
     <div class="row justify-content-center text-center">
             <h2 class="collections">Collections</h2>
             <div class="grid">
-                <div class="tile"><img src="images\Icons\ICOcharacters.webp"/>Characters</div>
+            <div class="tile"><a asp-area="" asp-controller="Characters" asp-action="Index"><img src="images\Icons\ICOcharacters.webp" />Characters</a></div>
                 <div class="tile"><img src="images\Icons\ICOcritters.webp" />Critters</div>
                 <div class="tile"><img src="images\Icons\ICOgems.webp" />Gems</div>
                 <div class="tile"><img src="images\Icons\ICOfish.webp" />Fish</div>
