Added Charactes link to navigation

--- a/Views/Shared/_NavigationPartial.cshtml
+++ b/Views/Shared/_NavigationPartial.cshtml
@@ -7,7 +7,8 @@
         </a>
         <div class="collapse" id="collections-collapse">
             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Characters</a></li>
+                <li><a asp-area="" asp-controller="Characters" asp-action="Index" 
+                    class="link-dark d-inline-flex text-decoration-none rounded">Characters</a></li>
                 <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Critters</a></li>
                 <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Fish</a></li>
                 <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Ingredients</a></li>
