--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -26,6 +26,10 @@ body {
     margin-left: 0;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
 
 /* Layout the sidebar and main content */
 .sidebar {
