--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     </div>
                     <div class="col">
                         <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                            <img src="images/Icons/ICODDVTracker.webp" alt="Disney Dreamlight Valley Tracker Icon" />
+                            <img src="~/images/Icons/ICODDVTracker.webp" alt="Disney Dreamlight Valley Tracker Icon" />
                         </a>
                     </div>
                     <div class="col-1 col-md-2">
