--- a/Views/Characters/Edit.cshtml
+++ b/Views/Characters/Edit.cshtml
@@ -24,6 +24,21 @@
                 <span asp-validation-for="CharacterName" class="text-danger"></span>
             </div>
             <div class="form-group">
+                @if (!string.IsNullOrEmpty(Model.ImageBase64))
+                {
+                    <img src="data:image/jpeg;base64,@Model.ImageBase64" alt="Character Image" width="100" />
+                }
+                else
+                {
+                    <p>No image available</p>
+                }
+            </div>
+            <div class="form-group">
+                <label asp-for="CharacterImage" class="control-label"></label>
+                <input type="file" asp-for="CharacterImage" class="form-control" />
+                <span asp-validation-for="CharacterImage" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="isUnlocked" class="control-label"></label>
                 <input asp-for="isUnlocked" class="form-control" />
                 <span asp-validation-for="isUnlocked" class="text-danger"></span>
