--- a/Views/Characters/Edit.cshtml
+++ b/Views/Characters/Edit.cshtml
@@ -10,8 +10,8 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form asp-action="Edit" method="post" enctype="multipart/form-data">
+            <div asp-validation-summary="ModelOnly" class="text-danger" ></div>
             <input type="hidden" asp-for="CharacterId" />
             <div class="form-group">
                 <label asp-for="GameVersionId" class="control-label"></label>
@@ -36,7 +36,6 @@
             <div class="form-group">
                 <label asp-for="CharacterImage" class="control-label"></label>
                 <input type="file" asp-for="CharacterImage" class="form-control" />
-                <span asp-validation-for="CharacterImage" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="isUnlocked" class="control-label"></label>
