--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -42,9 +42,9 @@
         </nav>
     </header>
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-2 sidebar d-none d-md-block">
+            <div class="col-1 sidebar d-none d-md-block">
                 <!-- Sidebar navigation -->
                 <nav>
                     <partial name="_NavigationPartial" />
