--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -83,3 +83,9 @@ a {
         background-color: #ccc;
         box-shadow: inset -3px -3px 7px rgba(255, 255, 255, 0.05), inset 3px 3px 5px rgba(0, 0, 0, 0.15);
     }
+
+/* Collection views */
+    .card {
+        background-color: transparent;
+    }
+}
