Added Fish view. Added link to Home tiles

--- a/Views/Characters/Index.cshtml
+++ b/Views/Characters/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<DDVTracker.Models.Character>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Characters";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
