--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
             <div class="tile"><a asp-area="" asp-controller="Characters" asp-action="Index"><img src="images\Icons\ICOcharacters.webp" />Characters</a></div>
                 <div class="tile"><img src="images\Icons\ICOcritters.webp" />Critters</div>
                 <div class="tile"><img src="images\Icons\ICOgems.webp" />Gems</div>
-                <div class="tile"><img src="images\Icons\ICOfish.webp" />Fish</div>
+                <div class="tile"><a asp-area="" asp-controller="Fish" asp-action="Index"><img src="images\Icons\ICOfish.webp" />Fish</a></div>
                 <div class="tile"><img src="images\Icons\ICOforage.webp" />Ingredients</div>
                 <div class="tile"><img src="images\Icons\ICOmeals.webp" />Meals</div>
             </div>
