--- a/Views/Fish/Edit.cshtml
+++ b/Views/Fish/Edit.cshtml
@@ -24,9 +24,18 @@
                 <span asp-validation-for="FishName" class="text-danger"></span>
             </div>
             <div class="form-group">
+                @if (!string.IsNullOrEmpty(Model.ImageBase64))
+                {
+                    <img src="data:image/jpeg;base64,@Model.ImageBase64" alt="Fish Image" width="100" />
+                }
+                else
+                {
+                    <p>No image available</p>
+                }
+            </div>
+            <div class="form-group">
                 <label asp-for="FishImage" class="control-label"></label>
-                <input asp-for="FishImage" class="form-control" />
-                <span asp-validation-for="FishImage" class="text-danger"></span>
+                <input type="file" asp-for="FishImage" class="form-control" />
             </div>
             <div class="form-group">
                 <label asp-for="FishLocations" class="control-label"></label>
