--- a/Views/Fish/Edit.cshtml
+++ b/Views/Fish/Edit.cshtml
@@ -39,7 +39,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="FishLocations" class="control-label"></label>
-                <input asp-for="FishLocations" class="form-control" />
+                <select asp-for="FishLocations" asp-items="ViewBag.Locations" class="form-control" multiple></select>
                 <span asp-validation-for="FishLocations" class="text-danger"></span>
             </div>
             <div class="form-group">
