--- a/Views/Fish/Edit.cshtml
+++ b/Views/Fish/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="FishId" />
             <div class="form-group">
@@ -44,7 +44,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="RippleColor" class="control-label"></label>
-                <input asp-for="RippleColor" class="form-control" />
+                <select asp-for="RippleColor" class="form-control">
+                    <option value="White">White</option>
+                    <option value="Blue">Blue</option>
+                    <option value="Orange">Orange</option>
+                </select>
                 <span asp-validation-for="RippleColor" class="text-danger"></span>
             </div>
             <div class="form-group">
