--- a/Views/Fish/Create.cshtml
+++ b/Views/Fish/Create.cshtml
@@ -23,13 +23,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="FishImage" class="control-label"></label>
-                <input asp-for="FishImage" class="form-control" />
-                <span asp-validation-for="FishImage" class="text-danger"></span>
+                <input type="file" asp-for="FishImage" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="FishLocations" class="control-label"></label>
-                <input asp-for="FishLocations" class="form-control" />
-                <span asp-validation-for="FishLocations" class="text-danger"></span>
+                <label asp-for="SelectedLocationIds" class="control-label"></label>
+                <select asp-for="SelectedLocationIds" asp-items="ViewBag.Locations" class="form-control" multiple></select>
+                <span asp-validation-for="SelectedLocationIds" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="RippleColor" class="control-label"></label>
