--- a/Views/Fish/Edit.cshtml
+++ b/Views/Fish/Edit.cshtml
@@ -38,9 +38,9 @@
                 <input type="file" asp-for="FishImage" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="FishLocations" class="control-label"></label>
-                <select asp-for="FishLocations" asp-items="ViewBag.Locations" class="form-control" multiple></select>
-                <span asp-validation-for="FishLocations" class="text-danger"></span>
+                <label asp-for="SelectedLocationIds" class="control-label"></label>
+                <select asp-for="SelectedLocationIds" asp-items="ViewBag.Locations" class="form-control" multiple></select>
+                <span asp-validation-for="SelectedLocationIds" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="RippleColor" class="control-label"></label>
