--- a/Views/Fish/Delete.cshtml
+++ b/Views/Fish/Delete.cshtml
@@ -27,7 +27,14 @@
             @Html.DisplayNameFor(model => model.FishImage)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FishImage)
+            @if (!string.IsNullOrEmpty(Model.ImageBase64))
+            {
+                <img src="data:image/jpeg;base64,@Model.ImageBase64" alt="Fish Image" width="100" />
+            }
+            else
+            {
+                <p>No image available</p>
+            }
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FishLocations)
