--- a/Views/Fish/Delete.cshtml
+++ b/Views/Fish/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DDVTracker.Models.Fish
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Fish - Delete";
 }
 
 <h1>Delete</h1>
@@ -40,7 +40,12 @@
             @Html.DisplayNameFor(model => model.FishLocations)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FishLocations)
+            <ul>
+                @foreach (var fishLocation in Model.FishLocations)
+                {
+                    <li>@fishLocation.Location.LocationName</li>
+                }
+            </ul>
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.RippleColor)
