--- a/Views/Fish/Details.cshtml
+++ b/Views/Fish/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DDVTracker.Models.Fish
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Fish - Details";
 }
 
 <h1>Details</h1>
@@ -25,14 +25,26 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FishImage)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FishImage)
+        <dd class="col-sm-10">
+            @if (!string.IsNullOrEmpty(Model.ImageBase64))
+            {
+                <img src="data:image/jpeg;base64,@Model.ImageBase64" alt="Fish Image" width="100" />
+            }
+            else
+            {
+                <p>No image available</p>
+            }
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FishLocations)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FishLocations)
+            <ul>
+                @foreach (var fishLocation in Model.FishLocations)
+                {
+                    <li>@fishLocation.Location.LocationName</li>
+                }
+            </ul>
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.RippleColor)
