--- a/Views/Characters/Delete.cshtml
+++ b/Views/Characters/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DDVTracker.Models.Character
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Characters - Delete";
 }
 
 <h1>Delete</h1>
