--- a/Views/Characters/Details.cshtml
+++ b/Views/Characters/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DDVTracker.Models.Character
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Characters - Details";
 }
 
 <h1>Details</h1>
