--- a/Views/Characters/Create.cshtml
+++ b/Views/Characters/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DDVTracker.Models.Character
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Characters - Create";
 }
 
 <h1>Create</h1>
