--- a/Views/Characters/Edit.cshtml
+++ b/Views/Characters/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DDVTracker.Models.Character
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Characters - Edit";
 }
 
 <h1>Edit</h1>
