--- a/Views/Fish/Create.cshtml
+++ b/Views/Fish/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DDVTracker.Models.Fish
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Fish - Create";
 }
 
 <h1>Create</h1>
