--- a/Views/Characters/Index.cshtml
+++ b/Views/Characters/Index.cshtml
@@ -1,4 +1,7 @@
 ﻿@model IEnumerable<DDVTracker.Models.Character>
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 
 @{
     ViewData["Title"] = "Characters";
@@ -7,7 +10,8 @@
 
 <h1>Characters</h1>
 @{
-    if (User.IsInRole(IdentityHelper.Master) || User.IsInRole(IdentityHelper.Admin) || User.IsInRole(IdentityHelper.Moderator))
+    // Only show the create button if the user is signed in and is not a regular user
+    if (SignInManager.IsSignedIn(User) && !User.IsInRole(IdentityHelper.User))
     {
         <p>
             <a asp-action="Create" class="btn btn-success">Create New</a>
@@ -33,20 +37,14 @@
                         <h6 class="card-title">@Html.DisplayFor(modelItem => item.GameVersion.GameVersionName)</h6>
 
                         @{
-                            if (User.IsInRole(IdentityHelper.User))
+                            if (SignInManager.IsSignedIn(User))
                             {
                                 <a asp-action="Details" asp-route-id="@item.CharacterId" class="btn btn-primary">Details</a>
                             }
-                            if (User.IsInRole(IdentityHelper.User) || User.IsInRole(IdentityHelper.Master)
-                                || User.IsInRole(IdentityHelper.Admin) || User.IsInRole(IdentityHelper.Moderator))
+                            if (SignInManager.IsSignedIn(User) && !User.IsInRole(IdentityHelper.User))
                             {
                                 <a asp-action="Edit" asp-route-id="@item.CharacterId" class="btn btn-primary">Edit</a>
-                            }
-                            if (User.IsInRole(IdentityHelper.Master) || User.IsInRole(IdentityHelper.Admin) || User.IsInRole(IdentityHelper.Moderator))
-                            {
-                                <p>
-                                    <a asp-action="Delete" asp-route-id="@item.CharacterId" class="btn btn-danger">Delete</a>
-                                </p>
+                                <a asp-action="Delete" asp-route-id="@item.CharacterId" class="btn btn-danger">Delete</a>
                             }
                         }
                     </div>
