--- a/Views/Fish/Index.cshtml
+++ b/Views/Fish/Index.cshtml
@@ -27,7 +27,7 @@
                     <div class="card-body">
                         @if (!string.IsNullOrEmpty(item.ImageBase64))
                         {
-                            <img src="data:image/jpeg;base64,@item.ImageBase64" width="200" alt="Fish Image" class="img-fluid" />
+                            <img src="data:image/jpeg;base64,@item.ImageBase64" alt="Fish Image" class="img-fluid" />
                         }
                         else
                         {
